syntax = "proto3";

option csharp_namespace = "eDoxa.Grpc.Protos.Payment.Services";

import "payment_requests.proto";
import "payment_responses.proto";

package edoxa.services.payment;

service PaymentService {
  rpc CreateStripePaymentIntent(CreateStripePaymentIntentRequest) returns (CreateStripePaymentIntentResponse);
  rpc CreatePaypalPayout(CreatePaypalPayoutRequest) returns (CreatePaypalPayoutResponse);
}